# rust

./: .env  package.json  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: logging.rs  main.rs  utils_base.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: message.rs
src-tauri/src/service/: message_service.rs  mod.rs
src-tauri/src/service/db/: mod.rs
src-tauri/src/service/files/: file_service.rs  mod.rs
src-tauri/src/service/log/: mod.rs
src-tauri/src/service/models/: message.rs
src/components/: Loader.vue  StepLabe.vue  Table.vue
src/compositions/: Envs.vue
src/models/: Message.ts
