[package]
name = "hmail"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "macros", "mysql", "chrono"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
async-recursion = "1.1.1"
thiserror = "1.0.61"
log="0.4"
simplelog="0.11"
ctrlc = "3.2.3"
dotenv = "0.15"
flexi_logger = "0.29.5"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
